# music-discoverer

./: .gitignore  README.md  package-lock.json  package.json
server/: Cargo.toml
server/src/: main.rs
service/: package-lock.json  package.json
service/src/: enums.js  ffmpegify-folder.js  index.js  music-brainz.js  utils.js  you-dl.js
service/src/models/: Track.js
src/: ffmpegify-folder.js  index.js  music-brainz.js  playlist-downloader.js  video-downloader.js
web-client/: .env  .gitignore  package-lock.json  package.json
web-client/src/: App.tsx  api.ts  config.ts  index.tsx
web-client/src/api/: api.ts
web-client/src/components/: Dropdown.js  NavItem.js  Navbar.js  Navbar.tsx  TreeList.js
web-client/src/components/hocs/: PrivateRoute.js
web-client/src/models/: UiNotification.ts
web-client/src/pages/: DownloadAlbum.tsx  Home.tsx  Login.tsx  MediaIdentifier.tsx  Protected.tsx
web-client/src/stores/: AppStore.ts  UiStore.ts
